put more field inputs on the payment info, also made pictures the same size.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,27 @@
                                                 <p class="text-change fancy-font">No spaces please!</p>
                                                 <p class="help-text2 text-change fancy-font"></p>
                                             </div>
+                                            <div class="form-row">
+                                                <div class="form-group col-md-6">
+                                                    <label class="text-change fancy-font">Street Address</label>
+                                                    <input type="text" class="form-control" name="street-address"
+                                                        placeholder="234 Avenue Lane..">
+                                                </div>
+                                                <div class="form-group col-md-6">
+                                                    <label class="text-change fancy-font">City</label>
+                                                    <input type="text" class="form-control" placeholder="City..">
+                                                </div>
+                                            </div>
+                                            <div class="form-row">
+                                                <div class="form-group col-md-6">
+                                                    <label class="text-change fancy-font">State</label>
+                                                    <input type="text" class="form-control" name="state" placeholder="State..">
+                                                </div>
+                                                <div class="form-group col-md-6">
+                                                    <label class="text-change fancy-font">Zip Code</label>
+                                                    <input type="text" class="form-control" placeholder="Your 5 digit zip code...">
+                                                </div>
+                                            </div>
                                             <div class="custom-control custom-checkbox">
                                                 <h4 class="text-white text-center fancy-font">How would you like to pay
                                                     for your
