took the aria labels off to better understand my code in index.html

--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
             <div class="card-header pt-3">
                 <div class="row ">
                     <div class="col-3 center-pills text-center pt-">
-                        <div class="nav flex-column nav-pills bg-light" id="v-pills-tab" role="tablist"
-                            aria-orientation="vertical">
+                        <div class="nav flex-column nav-pills bg-light" id="v-pills-tab" role="tablist">
                             <a class="nav-link active text-color" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home"
-                                role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+                                role="tab">Home</a>
                             <a class="nav-link text-color" id="v-pills-rent-tab" data-toggle="pill" href="#v-pills-rent"
-                                role="tab" aria-controls="v-pills-rent" aria-selected="false">Rent</a>
+                                role="tab">Rent</a>
                             <a class="nav-link text-color" id="v-pills-cart-tab" data-toggle="pill" href="#v-pills-cart"
-                                role="tab" aria-controls="v-pills-cart" aria-selected="false"><i class="fas fa-cart-arrow-down"></i></a>
+                                role="tab"><i class="fas fa-cart-arrow-down"></i></a>
                         </div>
                     </div>
                     <div class="col-9 pb-4">
                         <div class="tab-content" id="v-pills-tabContent">
-                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel">
                                 <div class="card bg-secondary text-change pt-4 pb-4">
                                     <div class="card-title text-center">
                                         <h2 class="fancy-font">PlaybillStore</h2>
@@ -61,7 +60,7 @@
 
                                 </div>
                             </div>
-                            <div class="tab-pane fade pb-6" id="v-pills-rent" role="tabpanel" aria-labelledby="v-pills-rent-tab">
+                            <div class="tab-pane fade pb-6" id="v-pills-rent" role="tabpanel">
                                 <div class="container ">
                                     <div class="card bg-secondary">
                                         <div class="card-body text-change">
@@ -78,7 +77,7 @@
 
 
                             </div>
-                            <div class="tab-pane fade" id="v-pills-cart" role="tabpanel" aria-labelledby="v-pills-cart-tab">
+                            <div class="tab-pane fade" id="v-pills-cart" role="tabpanel">
                                 <div class="container form-container">
                                     <div class="card bg-secondary">
                                         <div class="card-body text-change">
