--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h1 class="put-margin text-change text-center">Thank you {{firstName}} {{lastName}} for your purchase!</h1> 
             <h1 class="text-change text-center">Your Final Total is: {{price}}</h1>
             <div class="pt-4">
-                <button id="refreshButton" onclick="refreshPage()" type="submit" class="btn btn-warning btn-lg btn-block "><i class="fas fa-heart"></i></button>
+                <button id="refreshButton" onclick="refreshPage()" type="submit" class="btn btn-warning btn-lg btn-block class="text-change" ><i class="fas fa-heart"></i> Refresh Page</button>
             </div>
         </div>
     </script>
@@ -222,7 +222,7 @@
                     <p class="fancy-font text-change font-weight-bold pr-2 price-location">
                         ${{price}}</p>
                     <p class="fancy-font text-change font-weight-bold">
-                        <a class="adding-to-cart" href="#v-pills-cart" 
+                        <a id="{{index}}" class="adding-to-cart" href="#v-pills-cart" 
                             data-toggle="tab" ><i class="fas fa-plus-square icon"></i></a>
                     </p>
                 </div>
